Bug 212370 - makefs -t cd9660 segfaults on directories where just the case differs
Summary: makefs -t cd9660 segfaults on directories where just the case differs
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: CURRENT
Hardware: amd64 Any
: --- Affects Some People
Assignee: Sevan Janiyan
URL: https://reviews.freebsd.org/D8643
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-04 11:31 UTC by swildner
Modified: 2017-03-30 02:05 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description swildner 2016-09-04 11:31:47 UTC
Hello,

small testcase for said crash, verified on the 12.0-CURRENT-amd64-20160829 snapshot:

# mkdir /tmp/isoroot
# cd /tmp/isoroot
# mkdir t T
# makefs -t cd9660 /tmp/t.iso .
Segmentation fault (core dumped)
# 

Regards,
Sascha Wildner
Comment 1 commit-hook freebsd_committer freebsd_triage 2016-11-26 13:26:40 UTC
A commit references this bug:

Author: sevan
Date: Sat Nov 26 13:26:29 UTC 2016
New revision: 309192
URL: https://svnweb.freebsd.org/changeset/base/309192

Log:
  Fix null dereference when running out of nodes during rename.

  PR:		212370
  Submitted by:	Sascha Wildner <swildner AT gmail>
  Reviewed by:	bcr (mentor)
  Approved by:	bapt
  Obtained from:	NetBSD
  MFC after:	2 weeks
  Differential Revision:	https://reviews.freebsd.org/D8643

Changes:
  head/usr.sbin/makefs/cd9660.c
Comment 2 Sevan Janiyan freebsd_committer freebsd_triage 2016-11-26 13:27:54 UTC
Fix committed, thanks for reporting the issue.
Comment 3 commit-hook freebsd_committer freebsd_triage 2017-03-30 02:04:38 UTC
A commit references this bug:

Author: sevan
Date: Thu Mar 30 02:02:48 UTC 2017
New revision: 316198
URL: https://svnweb.freebsd.org/changeset/base/316198

Log:
  MFC r309192

  Fix null dereference when running out of nodes during rename.

  PR:		212370
  Submitted by:	Sascha Wildner <swildner AT gmail>
  Reviewed by:	bcr (mentor)
  Approved by:	bapt
  Obtained from:	NetBSD
  Differential Revision:	https://reviews.freebsd.org/D8643

Changes:
_U  stable/10/
  stable/10/usr.sbin/makefs/cd9660.c
Comment 4 commit-hook freebsd_committer freebsd_triage 2017-03-30 02:05:41 UTC
A commit references this bug:

Author: sevan
Date: Thu Mar 30 02:03:35 UTC 2017
New revision: 316199
URL: https://svnweb.freebsd.org/changeset/base/316199

Log:
  MFC r309192

  Fix null dereference when running out of nodes during rename.

  PR:             212370
  Submitted by:   Sascha Wildner <swildner AT gmail>
  Reviewed by:    bcr (mentor)
  Approved by:    bapt
  Obtained from:  NetBSD
  Differential Revision:  https://reviews.freebsd.org/D8643

Changes:
_U  stable/11/
  stable/11/usr.sbin/makefs/cd9660.c