MFC r309192

Fix null dereference when running out of nodes during rename.

PR:		212370
Submitted by:	Sascha Wildner <swildner AT gmail>
Reviewed by:	bcr (mentor)
Approved by:	bapt
Obtained from:	NetBSD
Differential Revision:	https://reviews.freebsd.org/D8643